Changed RoFA and added function for verifyRoFA
